Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33225

Qt compile failed with mingw64-4.8.1-rev4

    XMLWordPrintable

Details

    • 0ed30cbf09db591b46370888fa2f687310bf5cff

    Description

      g++ -c -pipe -fno-keep-inline-dllexport -O2 -std=c++0x -fno-exceptions -frtti -Wall -Wextra -DUNICODE -DQT_NO_CAST_FROM_ASCII -DQT_NO_DIRECTWRITE -DQT_NO_FONTCONFIG -DFT2_BUILD_LIBRARY -DQT_NO_EXCEPTIONS -DQT_NO_DEBUG -DQT_PLUGIN -DQT_PLATFORMSUPPORT_LIB -DQT_GUI_LIB -DQT_CORE_LIB -I. -I"..\..\..\3rdparty\freetype\src" -I"..\..\..\3rdparty\freetype\include" -I"..\..\..\..\include" -I"..\..\..\..\include\QtPlatformSupport" -I"..\..\..\..\include\QtPlatformSupport\5.1.1" -I"..\..\..\..\include\QtPlatformSupport\5.1.1\QtPlatformSupport" -I"..\..\..\..\include\QtGui" -I"..\..\..\..\include\QtGui\5.1.1" -I"..\..\..\..\include\QtGui\5.1.1\QtGui" -I"..\..\..\..\include\QtCore" -I"..\..\..\..\include\QtCore\5.1.1" -I"..\..\..\..\include\QtCore\5.1.1\QtCore" -I".moc\release_shared" -I"C:\TMP64\icu\include" -I"C:\TMP64\openssl\include" -I"..\..\..\..\mkspecs\win32-g++" -o .obj\release_shared\qwindowstheme.o qwindowstheme.cpp qwindowstheme.cpp: In member function 'virtual QPixmap QWindowsTheme::standardPixmap(QPlatformTheme::StandardPixmap, const QSizeF&) const': qwindowstheme.cpp:531:13: error: 'SHSTOCKICONINFO' was not declared in this scope
                   SHSTOCKICONINFO iconInfo;
                   ^
      qwindowstheme.cpp:531:29: error: expected ';' before 'iconInfo'
                   SHSTOCKICONINFO iconInfo;
                                   ^
      qwindowstheme.cpp:532:21: error: 'iconInfo' was not declared in this scope
                   memset(&iconInfo, 0, sizeof(iconInfo));
                           ^
      qwindowstheme.cpp:535:64: error: 'SIID_SHIELD' was not declared in this scope
                   if (QWindowsContext::shell32dll.sHGetStockIconInfo(SIID_SHIELD, SHGFI_ICON | iconSize, &iconInfo) == S_OK) {
                                                                      ^
      Makefile.Release:7073: recipe for target '.obj/release_shared/qwindowstheme.o' failed
      mingw32-make[6]: *** [.obj/release_shared/qwindowstheme.o] Error 1
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kkohne Kai Köhne
            ym ym
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes