Fix compilation with latest Mingw-w64 headers

Fix compilation with e.g. mingw-builds 4.8.1-rev4 package. The Mingw-W64
headers define SHSTOCKICONINFO only for vista and newer.

Task-number: QTBUG-33225
Change-Id: I30a62c642ae017c7eafb99b1efb06578fd61a12e
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>

cregit: 0ed30cbf09db591b46370888fa2f687310bf5cff https://github.com/qt/qtbase/commit/0ed30cbf09db591b46370888fa2f687310bf5cff